implemented timeout at model fit method and trial level. Added user config values and defaults. propgate failing trials to score save. Error and timeout failures propagated.

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -941,7 +941,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%prun\n",
+    "#%%prun -s cumulative -l 50\n",
+    "#%%prun\n",
     "if multiple_outcomes_example:\n",
     "    import multiprocessing\n",
     "    import sys\n",
@@ -959,7 +960,8 @@
     "\n",
     "    # --- Imports from your ml_grid project ---\n",
     "    from ml_grid.pipeline.data import pipe\n",
-    "    from ml_grid.pipeline.main import run\n",
+    "    # Import time_limit to handle timeouts\n",
+    "    from ml_grid.pipeline.main import run, time_limit\n",
     "    from ml_grid.util.create_experiment_directory import create_experiment_directory\n",
     "\n",
     "    # ========== TOGGLE FOR SINGLE-THREADED MODE ==========\n",
@@ -967,11 +969,10 @@
     "    # =====================================================\n",
     "\n",
     "    # 1. --- Load Configuration from YAML ---\n",
-    "    # This assumes 'config_hyperopt.yml' is in a location accessible from the notebook\n",
     "    config = load_config('config_hyperopt.yml')\n",
     "\n",
     "    # 2. --- Set up Experiment Environment ---\n",
-    "    project_root = Path.cwd() # Or specify the correct project root path\n",
+    "    project_root = Path.cwd() \n",
     "    experiments_base_dir = project_root / config['experiment']['experiments_base_dir']\n",
     "    experiment_dir = create_experiment_directory(\n",
     "        base_dir=experiments_base_dir,\n",
@@ -982,32 +983,29 @@
     "    space = {}\n",
     "    for key, value in config['hyperopt_search_space'].items():\n",
     "        if key == 'data':\n",
-    "            # Handle nested 'data' dictionary for feature groups\n",
     "            space['data'] = {k: hp.choice(f'data_{k}', v) for k, v in value.items()}\n",
     "        else:\n",
     "            space[key] = hp.choice(key, value)\n",
     "\n",
     "    # 4. --- Get Hyperopt Settings from Config ---\n",
     "    max_evals = config['hyperopt_settings']['max_evals']\n",
+    "    # Retrieve trial timeout, defaulting to None if not set\n",
+    "    trial_timeout = config['hyperopt_settings'].get('trial_timeout', None)\n",
     "\n",
     "    # 5. --- Determine Outcome Variables ---\n",
     "    outcome_var_list = []\n",
     "    if config['data'].get('multiple_outcomes', False):\n",
-    "        # Use an absolute path if the file is not in the current working directory\n",
     "        data_file_path = config['data']['file_path']\n",
     "        if not Path(data_file_path).is_absolute():\n",
     "            data_file_path = project_root / data_file_path\n",
     "\n",
-    "        # Let FileNotFoundError propagate naturally\n",
     "        df = pd.read_csv(data_file_path)\n",
     "        outcome_var_list = [col for col in df.columns if 'outcome_var_' in col]\n",
     "\n",
     "        if not outcome_var_list:\n",
     "            raise ValueError(f\"No outcome variables found with 'outcome_var_' prefix in {data_file_path}\")\n",
-    "\n",
     "        print(f\"Found {len(outcome_var_list)} outcome variables to process.\")\n",
     "    else:\n",
-    "        # Use the default from the config if multiple_outcomes is false\n",
     "        outcome_var_list = config['hyperopt_search_space']['outcome_var_n']\n",
     "\n",
     "    # 6. --- Define the Objective Function for Hyperopt ---\n",
@@ -1015,64 +1013,45 @@
     "        \"\"\"\n",
     "        Objective function for hyperopt. It receives sampled parameters\n",
     "        and the specific outcome variable for the current run.\n",
-    "        \n",
-    "        NOTE: Exceptions are caught here only to return a failed trial status\n",
-    "        to hyperopt, but critical errors should still halt execution.\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            # The 'params' dict contains the sampled hyperparameters.\n",
-    "            # We use it to build the local_param_dict for the pipeline.\n",
-    "            local_param_dict = params\n",
+    "            # Wrap the entire trial execution in the time_limit context manager\n",
+    "            with time_limit(trial_timeout):\n",
+    "                local_param_dict = params\n",
     "\n",
-    "            # Initialize the data pipeline and the main 'run' class instance.\n",
-    "            # This happens for every trial, which is necessary because the\n",
-    "            # data processing steps (scaling, feature selection, etc.)\n",
-    "            # are part of the hyperparameter search.\n",
+    "                # Initialize the data pipeline\n",
+    "                ml_grid_object = pipe(\n",
+    "                    file_name=config['data']['file_path'],\n",
+    "                    drop_term_list=config['data']['drop_term_list'],\n",
+    "                    model_class_dict=config['models'],\n",
+    "                    local_param_dict=local_param_dict,\n",
+    "                    base_project_dir=project_root,\n",
+    "                    experiment_dir=experiment_dir,\n",
+    "                    param_space_index=0, \n",
+    "                    outcome_var_override=outcome_var\n",
+    "                )\n",
     "\n",
-    "            # Correctly instantiate the 'pipe' object by unpacking the config\n",
-    "            ml_grid_object = pipe(\n",
-    "                file_name=config['data']['file_path'],\n",
-    "                drop_term_list=config['data']['drop_term_list'],\n",
-    "                model_class_dict=config['models'],\n",
-    "                local_param_dict=local_param_dict,\n",
-    "                base_project_dir=project_root,\n",
-    "                experiment_dir=experiment_dir,\n",
-    "                param_space_index=0, # Index is less relevant for hyperopt\n",
-    "                outcome_var_override=outcome_var\n",
-    "            )\n",
+    "                # Execute the models\n",
+    "                run_instance = run(local_param_dict=local_param_dict, ml_grid_object=ml_grid_object)\n",
+    "                _, highest_score = run_instance.execute()\n",
     "\n",
-    "            # The 'run' class's execute() method will loop through all models\n",
-    "            # enabled in the config and evaluate them with the current data pipeline setup.\n",
-    "            run_instance = run(local_param_dict=local_param_dict, ml_grid_object=ml_grid_object)\n",
+    "                return {'loss': -highest_score, 'status': STATUS_OK, 'params': params}\n",
     "\n",
-    "            # The execute method returns the list of errors and the highest score\n",
-    "            # achieved by any model in that trial.\n",
-    "            _, highest_score = run_instance.execute()\n",
-    "\n",
-    "            # Hyperopt minimizes 'loss', so we return the negative of the highest score.\n",
-    "            return {'loss': -highest_score, 'status': STATUS_OK, 'params': params}\n",
+    "        except TimeoutError:\n",
+    "            # Handle the specific trial timeout\n",
+    "            print(f\"TIMEOUT in objective for {outcome_var} (Limit: {trial_timeout}s)\", file=sys.stderr)\n",
+    "            return {'loss': float('inf'), 'status': 'fail', 'message': 'Trial Timeout'}\n",
     "\n",
     "        except Exception as e:\n",
-    "            # Log the error for debugging\n",
     "            tb_str = traceback.format_exc()\n",
     "            print(f\"ERROR in objective for {outcome_var} with params {params}: {e}\\n{tb_str}\", file=sys.stderr)\n",
-    "\n",
-    "            # Return failure status to hyperopt (this allows it to try other params)\n",
-    "            # For truly critical errors, you could raise instead\n",
     "            return {'loss': float('inf'), 'status': 'fail', 'message': str(e)}\n",
     "\n",
     "    # 7. --- Define the Worker Function for Parallel Processing ---\n",
     "    def process_single_outcome(outcome_var):\n",
-    "        \"\"\"\n",
-    "        This function is executed by each parallel worker. It sets up the\n",
-    "        objective function for a specific outcome and runs the fmin loop.\n",
-    "        \n",
-    "        NOTE: Exceptions are no longer caught here - they will propagate and halt execution.\n",
-    "        \"\"\"\n",
     "        start_time = datetime.now()\n",
     "        print(f\"[{start_time}] Starting optimization for outcome: {outcome_var}\", flush=True)\n",
     "\n",
-    "        # Use functools.partial to bind the current outcome_var to the objective function.\n",
     "        fmin_objective = partial(objective, outcome_var=outcome_var)\n",
     "\n",
     "        trials = Trials()\n",
@@ -1098,27 +1077,19 @@
     "    start_total = datetime.now()\n",
     "    \n",
     "    if USE_SINGLE_THREADED:\n",
-    "        # ========== SINGLE-THREADED EXECUTION ==========\n",
     "        print(f\"Starting all optimizations at {start_total} using SINGLE-THREADED mode.\")\n",
-    "        \n",
     "        results = []\n",
     "        for outcome in outcome_var_list:\n",
     "            result = process_single_outcome(outcome)\n",
     "            results.append(result)\n",
-    "        \n",
     "    else:\n",
-    "        # ========== PARALLEL EXECUTION ==========\n",
     "        num_cores = max(1, multiprocessing.cpu_count() - 2)\n",
-    "        \n",
     "        print(f\"Starting all optimizations at {start_total} using {num_cores} cores.\")\n",
-    "\n",
-    "        # Parallel will raise exceptions from workers automatically\n",
     "        results = Parallel(n_jobs=num_cores, verbose=10)(\n",
     "            delayed(process_single_outcome)(outcome)\n",
     "            for outcome in outcome_var_list\n",
     "        )\n",
     "\n",
-    "    # --- Process and display final results ---\n",
     "    print(\"\\n\" + \"=\"*70)\n",
     "    print(\"Hyperparameter Optimization Summary\")\n",
     "    print(\"=\"*70)\n",
@@ -1127,7 +1098,7 @@
     "        print(f\"   Best parameter combination found: {best_params}\")\n",
     "\n",
     "    end_total = datetime.now()\n",
-    "    print(f\"\\nCompleted all optimizations at {end_total} (Total duration: {end_total - start_total})\")"
+    "    print(f\"\\nCompleted all optimizations at {end_total} (Total duration: {end_total - start_total})\")\n"
    ]
   },
   {
@@ -1504,6 +1475,24 @@
    "outputs": [],
    "source": [
     "display(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['failed'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(by='run_time', ascending=False)"
    ]
   }
  ],
