# 6 --- Configure Global Parameters from HYPEROPT Config ---

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -996,6 +996,29 @@
     "    data_file_path = config['data']['file_path']\n",
     "    if not Path(data_file_path).is_absolute():\n",
     "        data_file_path = project_root / data_file_path\n",
+    "        \n",
+    "    # 6 --- Configure Global Parameters from HYPEROPT Config ---\n",
+    "    \n",
+    "    global_parameters.verbose = config['global_params']['verbose']\n",
+    "    global_parameters.error_raise = config['global_params']['error_raise']\n",
+    "    global_parameters.h2o_show_progress = config['global_params'].get('h2o_show_progress', False)\n",
+    "    global_parameters.n_iter = config['global_params']['n_iter']\n",
+    "    global_parameters.sub_sample_param_space_pct = config['global_params']['sub_sample_param_space_pct']\n",
+    "    global_parameters.max_param_space_iter_value = config['global_params']['max_param_space_iter_value']\n",
+    "    global_parameters.force_second_cv = config['global_params'].get('force_second_cv', False)\n",
+    "    global_parameters.model_eval_time_limit = config['global_params']['model_eval_time_limit']\n",
+    "    \n",
+    "    print(f\"Global parameters set from hyperopt config:\")\n",
+    "    print(f\"  - verbose: {global_parameters.verbose}\")\n",
+    "    print(f\"  - error_raise: {global_parameters.error_raise}\")\n",
+    "    print(f\"  - h2o_show_progress: {global_parameters.h2o_show_progress}\")\n",
+    "    print(f\"  - n_iter: {global_parameters.n_iter}\")\n",
+    "    print(f\"  - sub_sample_param_space_pct: {global_parameters.sub_sample_param_space_pct}\")\n",
+    "    print(f\"  - max_param_space_iter_value: {global_parameters.max_param_space_iter_value}\")\n",
+    "    print(f\"  - force_second_cv: {global_parameters.force_second_cv}\")\n",
+    "    print(f\"  - model_eval_time_limit: {global_parameters.model_eval_time_limit}\")\n",
+    "\n",
+    "\n",
     "\n",
     "    # OPTIMIZATION: Load data ONCE here\n",
     "    print(f\"Pre-loading data from {data_file_path}...\", flush=True)\n",
