Refactor: Clean up unused variables and improve code style
This commit focuses on improving code quality by removing unused variables and adhering to more Pythonic style conventions.

Key changes include:

Removed numerous unused local variables across various modules, including model classes, pipeline steps, and utility functions.
Replaced lambda functions with standard def statements for better readability and clarity in keras_classifier_class.py and embeddings.py.
Updated boolean comparisons from == False to the more idiomatic not ... in main.py and notebooks.
Simplified boolean DataFrame indexing in plot_feature_categories.py and notebooks.
Removed unnecessary assignments where the return value of a function was not used.
These changes do not affect the functionality but enhance code maintainability and reduce clutter.

--- a/notebooks/grid_score_reader_ML_Grid_V_1.8_unit_test.ipynb
+++ b/notebooks/grid_score_reader_ML_Grid_V_1.8_unit_test.ipynb
@@ -495,10 +495,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[(df['annotation_n']==False) &\n",
-    "   (df['meta_sp_annotation_n']==False) &\n",
-    "   (df['meta_sp_annotation_mrc_n']==False) &\n",
-    "   (df['annotation_mrc_n']==False)\n",
+    "df[(not df['annotation_n']) &\n",
+    "   (not df['meta_sp_annotation_n']) &\n",
+    "   (not df['meta_sp_annotation_mrc_n']) &\n",
+    "   (not df['annotation_mrc_n'])\n",
     "  ]"
    ]
   },
@@ -520,11 +520,11 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    df[(df['annotation_n']==False) &\n",
-    "       (df['meta_sp_annotation_n']==False) &\n",
-    "       (df['meta_sp_annotation_mrc_n']==False) &\n",
-    "       (df['annotation_mrc_n']==False) &\n",
-    "       (df['date_time_stamp']==False)\n",
+    "    df[(not df['annotation_n']) &\n",
+    "       (not df['meta_sp_annotation_n']) &\n",
+    "       (not df['meta_sp_annotation_mrc_n']) &\n",
+    "       (not df['annotation_mrc_n']) &\n",
+    "       (not df['date_time_stamp'])\n",
     "      ].sort_values(by='auc', ascending=False)\n",
     "except Exception as e:\n",
     "    print(e)"
@@ -547,7 +547,7 @@
    "source": [
     "try:\n",
     "    df[\n",
-    "       (df['date_time_stamp']==False)\n",
+    "       (not df['date_time_stamp'])\n",
     "      ].sort_values(by='auc', ascending=False)\n",
     "except:\n",
     "    pass"
@@ -1935,7 +1935,7 @@
     "#df.iloc[0]\n",
     "pd.set_option('display.width', None)\n",
     "res  =df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='f1_m', ascending=False).iloc[0]\n",
     "\n",
     "pd.DataFrame(res)"
@@ -1951,7 +1951,7 @@
     "#df.iloc[0]\n",
     "pd.set_option('display.width', None)\n",
     "res  =df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False).iloc[0]\n",
     "\n",
     "pd.DataFrame(res)"
@@ -1975,7 +1975,7 @@
    "outputs": [],
    "source": [
     "sv = df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)['f_list'].iloc[0]\n",
     "\n",
     "svcn = get_column_names(sv)"
@@ -2175,9 +2175,9 @@
    "outputs": [],
    "source": [
     "df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)[df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)['method_name']=='xbg']"
    ]
   },
@@ -2200,9 +2200,9 @@
    "source": [
     "try:\n",
     "    print(df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)[df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)['method_name']=='xbg']['algorithm_implementation'].iloc[0])\n",
     "\n",
     "except:\n",
@@ -2227,9 +2227,9 @@
    "outputs": [],
    "source": [
     "eval(str(df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)[df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)['method_name']=='xbg']['algorithm_implementation'].iloc[0]).replace(\"nan\", \"np.nan\").replace(\", ...\", \"\"))"
    ]
   },
@@ -2246,9 +2246,9 @@
     "try:\n",
     "    break\n",
     "    model = eval(str(df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)[df[\n",
-    "   (df['date_time_stamp']==False)\n",
+    "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)['method_name']=='xbg']['algorithm_implementation'].iloc[0]).replace(\"nan\", \"np.nan\").replace(\", ...\", \"\"))\n",
     "    print(\"set best model params\")\n",
     "except Exception as e:\n",
@@ -2410,7 +2410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[(df['method_name']=='XGBClassifier') & (df['date_time_stamp']==False)]"
+    "df[(df['method_name']=='XGBClassifier') & (not df['date_time_stamp'])]"
    ]
   },
   {
@@ -2441,7 +2441,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    print(df[(df['method_name']=='XGBClassifier') & (df['date_time_stamp']==False)]['algorithm_implementation'].iloc[0])\n",
+    "    print(df[(df['method_name']=='XGBClassifier') & (not df['date_time_stamp'])]['algorithm_implementation'].iloc[0])\n",
     "\n",
     "except:\n",
     "    pass"
@@ -2463,7 +2463,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    sv = df[(df['method_name']=='XGBClassifier') & (df['date_time_stamp']==False)]['f_list'].iloc[0]\n",
+    "    sv = df[(df['method_name']=='XGBClassifier') & (not df['date_time_stamp'])]['f_list'].iloc[0]\n",
     "\n",
     "    svcn = get_column_names(sv)\n",
     "\n",
