--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -839,7 +839,7 @@
    "outputs": [],
    "source": [
     "#%%prun\n",
-    "if( multiple_outcomes_example == False):\n",
+    "if( not multiple_outcomes_example):\n",
     "\n",
     "    # Fix the additional argument (outcome_var) using partial\n",
     "    # Define the single outcome to test\n",
@@ -868,7 +868,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if( multiple_outcomes_example == False):\n",
+    "if( not multiple_outcomes_example):\n",
     "    best"
    ]
   },
@@ -878,7 +878,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if( multiple_outcomes_example == False):\n",
+    "if( not multiple_outcomes_example):\n",
     "    # Assuming the log file is in the current experiment_dir\n",
     "    results_df = pd.read_csv(experiment_dir / 'final_grid_score_log.csv')"
    ]
@@ -889,7 +889,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if( multiple_outcomes_example == False):\n",
+    "if( not multiple_outcomes_example):\n",
     "    if 'results_df' in locals():\n",
     "        display(results_df.sort_values('auc', ascending=False).iloc[0])\n",
     "    else:\n",
@@ -902,7 +902,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if( multiple_outcomes_example == False):\n",
+    "if( not multiple_outcomes_example):\n",
     "    if 'results_df' in locals():\n",
     "        display(results_df.sort_values('auc', ascending=False))\n",
     "    else:\n",
@@ -915,7 +915,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if( multiple_outcomes_example == True):\n",
+    "if( multiple_outcomes_example):\n",
     "\n",
     "    dft = pd.read_csv(input_csv_path.resolve(), nrows=1)\n",
     "    dft"
@@ -929,7 +929,7 @@
    "source": [
     "# get outcome variables by finding prefix \"outcome_var_\" in column list\n",
     "\n",
-    "if( multiple_outcomes_example == True):\n",
+    "if( multiple_outcomes_example):\n",
     "    outcome_var_list = [dft.columns[i] for i in range(len(dft.columns)) if \"outcome_var_\" in dft.columns[i]]\n",
     "\n",
     "    outcome_var_list"
@@ -1008,7 +1008,7 @@
     "    global_parameters.force_second_cv = config['global_params'].get('force_second_cv', False)\n",
     "    global_parameters.model_eval_time_limit = config['global_params']['model_eval_time_limit']\n",
     "    \n",
-    "    print(f\"Global parameters set from hyperopt config:\")\n",
+    "    print(\"Global parameters set from hyperopt config:\")\n",
     "    print(f\"  - verbose: {global_parameters.verbose}\")\n",
     "    print(f\"  - error_raise: {global_parameters.error_raise}\")\n",
     "    print(f\"  - h2o_show_progress: {global_parameters.h2o_show_progress}\")\n",
