--- a/notebooks/grid_score_reader_ML_Grid_V_1.8_unit_test.ipynb
+++ b/notebooks/grid_score_reader_ML_Grid_V_1.8_unit_test.ipynb
@@ -335,7 +335,7 @@
     "def time_per_fit(row):\n",
     "    try:\n",
     "        return float((row['run_time']/row['n_fits']))\n",
-    "    except:\n",
+    "    except Exception:\n",
     "        return 0"
    ]
   },
@@ -388,7 +388,7 @@
    "source": [
     "try:\n",
     "    len(eval(df['f_list'].iloc[0])[0])\n",
-    "except:\n",
+    "except Exception:\n",
     "    pass"
    ]
   },
@@ -419,7 +419,7 @@
    "source": [
     "try:\n",
     "    df['method_name'].unique()\n",
-    "except:\n",
+    "except Exception:\n",
     "    pass"
    ]
   },
@@ -549,7 +549,7 @@
     "    df[\n",
     "       (not df['date_time_stamp'])\n",
     "      ].sort_values(by='auc', ascending=False)\n",
-    "except:\n",
+    "except Exception:\n",
     "    pass"
    ]
   },
@@ -923,7 +923,7 @@
     "\n",
     "for i in range(0, len(df)):\n",
     "    sv = df['f_list'].iloc[i]\n",
-    "    if(type(sv)== str):\n",
+    "    if isinstance(sv, str):\n",
     "        svcn = get_column_names(sv)\n",
     "        data_sv.extend(svcn)\n",
     "\n"
@@ -997,7 +997,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(_)"
+    "# type(_)"
    ]
   },
   {
@@ -1360,11 +1360,12 @@
    "source": [
     "import shap\n",
     "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import auc\n",
     "\n",
     "model = XGBRegressor()\n",
     "model.fit(X, y)\n",
     "y_pred = model.predict(X)\n",
-    "from sklearn.metrics import *\n",
+    "# from sklearn.metrics import *\n",
     "\n",
     "auc(y, y_pred)\n"
    ]
@@ -1730,11 +1731,12 @@
    "source": [
     "import shap\n",
     "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import auc\n",
     "\n",
     "model = XGBRegressor()\n",
     "model.fit(X_f, y)\n",
     "y_pred = model.predict(X_f)\n",
-    "from sklearn.metrics import *\n",
+    "# from sklearn.metrics import *\n",
     "\n",
     "auc(y, y_pred)"
    ]
@@ -2205,7 +2207,7 @@
     "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)['method_name']=='xbg']['algorithm_implementation'].iloc[0])\n",
     "\n",
-    "except:\n",
+    "except Exception:\n",
     "    pass"
    ]
   },
@@ -2242,9 +2244,10 @@
    "source": [
     "#call on D not on eval\n",
     "#train test and then eval\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "try:\n",
-    "    break\n",
+    "    # break\n",
     "    model = eval(str(df[\n",
     "   (not df['date_time_stamp'])\n",
     "  ].sort_values(by='auc', ascending=False)[df[\n",
@@ -2283,6 +2286,7 @@
    "outputs": [],
    "source": [
     "#from sklearn.metrics import auc_roc_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "roc_auc_score(y_test, y_pred)"
    ]
   },
@@ -2443,7 +2447,7 @@
     "try:\n",
     "    print(df[(df['method_name']=='XGBClassifier') & (not df['date_time_stamp'])]['algorithm_implementation'].iloc[0])\n",
     "\n",
-    "except:\n",
+    "except Exception:\n",
     "    pass"
    ]
   },
@@ -2462,6 +2466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import roc_auc_score\n",
     "try:\n",
     "    sv = df[(df['method_name']=='XGBClassifier') & (not df['date_time_stamp'])]['f_list'].iloc[0]\n",
     "\n",
@@ -2669,7 +2674,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "break"
+    "# break"
    ]
   },
   {
