--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -6,8 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "#os.environ[\"XLA_FLAGS\"] = \"--xla_gpu_cuda_data_dir=/usr/lib/nvidia-cuda-toolkit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import logging\n",
-    "\n",
+    "import os\n",
+    "import shutil\n",
+    "from pathlib import Path\n",
+    "import yaml\n",
     "# --- Make sure your notebook's working directory is the project root ---\n",
     "# (e.g., /home/samorah/_data/ml_binary_classification_gridsearch_hyperOpt/)\n",
     "from pathlib import Path\n",
@@ -117,12 +130,6 @@
     "This script provides a clear example of the minimum setup required to create\n",
     "an `ml_grid_object`. It is intended for debugging the data pipeline in isolation.\n",
     "\"\"\"\n",
-    "\n",
-    "import os\n",
-    "import shutil\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import yaml\n",
     "\n",
     "# --- Essential imports from your ml_grid project ---\n",
     "# Ensure your project is installed (e.g., `pip install -e .`) or the path is configured\n",
@@ -694,13 +701,6 @@
     "        print(f\"Error during cleanup of run_0: {e}\")\n",
     "    print(\"\\n6. Clean up complete.\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1524,6 +1524,13 @@
    "source": [
     "df.sort_values(by='run_time', ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1542,7 +1549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
